# SNPest

./: LICENSE  README.md  README_install.txt  README_license.txt
SNPest/: Makefile.am  SNPest.pl  dfgEval_SNPest.cpp  vcf2fasta.pl
SNPest/dfgspec/: CalculateDamageMatrix.cc  depth101_factorGraph.txt  depth101_variables.txt  depth102_factorGraph.txt  depth106_factorGraph.txt  depth107_factorGraph.txt  depth108_variables.txt  depth10_factorGraph.txt  depth10_variables.txt  depth111_variables.txt  depth112_variables.txt  depth115_factorGraph.txt  depth115_variables.txt  depth116_factorGraph.txt  depth117_variables.txt  depth118_variables.txt  depth11_variables.txt  depth120_variables.txt  depth121_factorGraph.txt  depth121_variables.txt  depth122_factorGraph.txt  depth122_variables.txt  depth123_variables.txt  depth124_factorGraph.txt  depth124_variables.txt  depth125_factorGraph.txt  depth125_variables.txt  depth127_factorGraph.txt  depth128_factorGraph.txt  depth129_factorGraph.txt  depth129_variables.txt  depth12_factorGraph.txt  depth130_factorGraph.txt  depth130_variables.txt  depth131_variables.txt  depth132_factorGraph.txt  depth133_variables.txt  depth136_factorGraph.txt  depth137_variables.txt  depth138_factorGraph.txt  (+164 more)
binaries/: dfgEval_SNPest_static
phy/: Makefile  Makefile.in  README_thirdPartyLibraries.txt  config.h  config.status  configure  configure.ac  libtool  output.txt  test
phy/.svn/: entries
phy/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
phy/phy/: ContinuousFactors.h  DataIO.h  DataIO.lo  DfgIO.cpp  (+71 more)
(+360 files in other folders)
